# mimic

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  ruff.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml
commands/: learn.md  review.md
mimic/: cli.py  config.py  github.py  local_git.py  prompts.py  providers.py  review.py  review_test.py  scrape.py  scrape_test.py  storage.py  storage_test.py  synthesis.py  types.py  verbose.py  verbose_test.py
plugins/mimic/.claude-plugin/: plugin.json
plugins/mimic/commands/: learn.md
plugins/mimic/skills/mimic/: SKILL.md
skills/mimic/: SKILL.md
