[project]
name = "mimic-cli"
version = "0.6.1"
description = "Scrape a GitHub reviewer's PR comments into a persona doc you can point at your diff."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "Andrew Lau" }]
keywords = ["github", "code-review", "claude", "cli"]
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "pydantic>=2.6",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
openai = ["openai>=1.40"]
all = ["anthropic>=0.40", "openai>=1.40"]
dev = ["pytest>=8.0", "ruff>=0.6", "mypy>=1.10"]

[project.scripts]
mimic = "mimic.cli:main"

[project.urls]
Homepage = "https://github.com/andrewlau624/mimic"
Issues = "https://github.com/andrewlau624/mimic/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mimic"]

[tool.pytest.ini_options]
python_files = ["*_test.py"]
testpaths = ["mimic"]
